changed author mail

--- a/cheatsheet_vim.tex
+++ b/cheatsheet_vim.tex
@@ -47,7 +47,7 @@ leftmargin=0mm,rightmargin=0mm,skipbelow=0mm,skipabove=0mm,
 \footnotesize
 \sffamily
 \textbf{Vim Cheatsheet}\\
-{\scriptsize sebastien.druon@umontpellier.fr}
+{\scriptsize rancune@rancune.org}
 \end{mdframed}
 }
 
